# schema

./: CMakeLists.txt  README.md
assets/: data.txt
src/: CMakeLists.txt  main.cpp  model.hpp  readfile.cpp  readfile.hpp
